# local-mac-transcriber

./: .env.example  .gitignore  README.md  WhisperTrascribe.ipynb  config.yaml  main.py  pyproject.toml
